--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body id="main_body" >
+    <div class="" id="form_container">
 		<h1><a>Register Your Product</a></h1>
-		<form id="form_6348" class="appnitro"  method="post" action="warranty-submission.php.liquid">
+		<form id="form_6348" class="appnitro"  method="post" action="warranty-submission.php">
 					<div class="form_description">
 			<h2>Register Your Product</h2>
 			<p></p>
@@ -73,7 +74,7 @@
 			</ul>
 		</form>	
 	
-    
+    </div>
    
 	</body>
 </html>
