embed google forms

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body id="main_body" >
+<iframe src="[object Object]" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<!--
     <div class="" id="form_container">
 		<h1><a>Register Your Product</a></h1>
 		<form id="form_6348" class="appnitro"  method="post" action="warranty-submission.php">
@@ -75,6 +77,7 @@
 		</form>	
 	
     </div>
+-->
    
 	</body>
 </html>
