--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 <link rel="stylesheet" type="text/css" href="view.css" media="all">
 <link rel="stylesheet" type="text/css" href="Overlay.css" media="all">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+
+
 <script type="text/javascript" src="view.js"></script>
 <script typ="text/javascript" src="Overlay.js"></script>
 
 </head>
 
 <body id="main_body" >
-<iframe src="[object Object]" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-   <!--
+<!--<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfkDIY1ZF7eo2aPLq1SoFnVbiIvZ4TDF18phqhXh3Ov5nh1ag/viewform?embedded=true#start=embed" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
+   
     <div class="" id="form_container">
 		<h1><a>Register Your Product</a></h1>
-		<form id="form_6348" class="appnitro"  method="post" action="warranty-submission.php">
+		<form id="form_6348" class="appnitro"  method="post" action="/warranty-submission.php">
 					<div class="form_description">
 			<h2>Register Your Product</h2>
 			<p></p>
@@ -77,7 +80,7 @@
 		</form>	
 	
     </div>
--->
+
    
 	</body>
 </html>
