--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
     <div class="" id="form_container">
 		<h1><a>Register Your Product</a></h1>
-		<form id="form_6348" class="appnitro"  method="post" action="/warranty-submission.php">
+		<form id="form_6348" class="appnitro"  method="post" action="http://formspree.io/robert@amzworldwide.com">
 					<div class="form_description">
 			<h2>Register Your Product</h2>
 			<p></p>
